# foundry

./: .affected.toml  .codespellrc  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .remmapings.txt  .wakatime-project  ADVANCED_OPTIMIZATION_FRAMEWORK_11312.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  Dockerfile  Dockerfile-from-source  Dockerfile.cross  Dockerfile.offline-test  Dockerfile_temp  Dozyay  FUNDING.json  FooTest.sol  FooTest2.sol  ForkTest.sol  GreetTest.sol  JIT_DEBUGGING.md  LATEST.md  LICENSE-APACHE  LICENSE-MIT  MONAD_V1_7_PORT_SPEC.md  Makefile  MyToken.sol  OFFLINE_TEST_GUIDE.md  PR_DESCRIPTION.md  README.cast.md  README.forge.md  README.md  RELEASE_PROCESS.md  SECURITY.md  (+55 more)
abi/: Cargo.toml  README.md
abi/abi/: HEVM.sol
anvil/: Cargo.toml  README.md  all.html  build.rs  constant.CHAIN_ID.html  constant.DEFAULT_GAS_LIMIT.html  constant.VERSION_MESSAGE.html  enum.EthereumHardfork.html  enum.ForkChoice.html  enum.Hardfork.html  enum.OptimismHardfork.html  fn.inject_precompiles.html  fn.spawn.html  fn.try_spawn.html  index.html  sidebar-items.js  struct.AccountGenerator.html  struct.NodeConfig.html  struct.NodeHandle.html  trait.PrecompileFactory.html  type.IpcTask.html
anvil/anvil-core/: Cargo.toml
anvil/anvil-server/: Cargo.toml
anvil/args/: fn.run.html  fn.run_command.html  fn.setup.html  index.html
anvil/cmd/: constant.DEFAULT_DUMP_INTERVAL.html  constant.IPC_HELP.html  fn.duration_from_secs_f64.html  fn.read_genesis_file.html  index.html  sidebar-items.js  struct.AnvilEvmArgs.html  struct.ForkUrl.html  struct.NodeArgs.html  struct.PeriodicStateDumper.html  struct.StateFile.html
anvil/config/: constant.BANNER.html  constant.CHAIN_ID.html  constant.DEFAULT_GAS_LIMIT.html  constant.DEFAULT_IPC_ENDPOINT.html  constant.DEFAULT_MNEMONIC.html  constant.NODE_PORT.html  constant.VERSION_MESSAGE.html  enum.ForkChoice.html  fn.anvil_dir.html  fn.anvil_tmp_dir.html  fn.derive_block_and_transactions.html  fn.find_latest_fork_block.html  index.html  sidebar-items.js  struct.AccountGenerator.html  struct.NodeConfig.html  struct.PruneStateHistoryConfig.html
anvil/core/: Cargo.toml
anvil/eth/: index.html  sidebar-items.js
anvil/evm/: fn.inject_precompiles.html  index.html  sidebar-items.js  trait.PrecompileFactory.html
anvil/filter/: constant.ACTIVE_FILTER_TIMEOUT_SECS.html  enum.EthFilter.html  fn.new_id.html  index.html  sidebar-items.js  struct.Filters.html  struct.LogsFilter.html  type.FilterMap.html
anvil/hardfork/: enum.ChainHardfork.html  enum.EthereumHardfork.html  enum.Hardfork.html  enum.OptimismHardfork.html  fn.ethereum_hardfork_from_block_tag.html  fn.spec_id_from_ethereum_hardfork.html  fn.spec_id_from_optimism_hardfork.html  index.html  sidebar-items.js
anvil/logging/: constant.EVM_CONSOLE_LOG_TARGET.html  constant.NODE_USER_LOG_TARGET.html  index.html  sidebar-items.js  struct.LoggingManager.html  struct.NodeLogLayer.html
anvil/opts/: enum.AnvilSubcommand.html  index.html  sidebar-items.js  struct.Anvil.html
anvil/pubsub/: enum.EthSubscription.html  fn.filter_logs.html  index.html  sidebar-items.js  struct.EthSubscriptionParams.html  struct.EthSubscriptionResponse.html  struct.LogsSubscription.html
anvil/rpc/: Cargo.toml
anvil/server/: Cargo.toml  fn.router.html  fn.serve.html  fn.serve_on.html  fn.spawn_ipc.html  fn.try_spawn_ipc.html  index.html  sidebar-items.js
anvil/service/: index.html  sidebar-items.js  struct.BlockProducer.html  struct.NodeService.html
anvil/shutdown/: fn.signal.html  index.html  sidebar-items.js  struct.Shutdown.html  struct.Signal.html
anvil/src/: anvil.rs  cmd.rs  config.rs  filter.rs  fork.rs  genesis.rs  hardfork.rs  lib.rs  logging.rs  pubsub.rs  service.rs  task_manager.rs
anvil/tasks/: index.html  sidebar-items.js  struct.TaskManager.html
anvil/test-data/: SimpleStorage.json  SimpleStorage.sol  emit_logs.json  greeter.json  multicall.sol
benches/: BUILD_BENCH.md  COVERAGE_BENCH.md  Cargo.toml  FUZZ_BENCH.md  LATEST.md  README.md  TEST_BENCH.md  benchmark.sh  forge_build_no_cache.rs  forge_build_with_cache.rs  forge_coverage.rs  forge_fuzz_test.rs  forge_test.rs  repos_and_versions.sh  run.sh  run_benchmarks.sh
benches/commands/: forge_build_no_cache.sh  forge_build_with_cache.sh  forge_test.sh
benches/schema/: README.md  (+1 more)
binder/: Cargo.toml  README.md
cast/: Cargo.toml  README.md  all.html  enum.AbiPath.html  enum.AwsRegion.html  fn.explorer_client.html  fn.strip_0x.html  index.html  macro.call_inspectors.html  sidebar-items.js  struct.AwsChainProvider.html  struct.AwsClient.html  struct.AwsHttpClient.html  struct.Cast.html  struct.Env.html  struct.EnvMut.html  struct.EvmEnv.html  struct.InterfaceSource.html  struct.KmsClient.html  struct.SimpleCast.html  struct.TxBuilder.html  trait.InspectorExt.html  type.TxBuilderOutput.html
chisel/: Cargo.toml  README.md  all.html  index.html  sidebar-items.js
cli/: Cargo.toml  README.md  build.rs
common/: Cargo.toml  README.md
config/: Cargo.toml  README.md
dapp/: Cargo.toml  GreetTest.sol  README.md
dapptools/: Cargo.toml
doc/: Cargo.toml  README.md
evm/: Cargo.toml
evm-adapters/: Cargo.toml  README.md
fmt/: Cargo.toml  README.md
forge/: Cargo.toml  README.md  all.html  constant.FOUNDRY_LOCK.html  enum.DepIdentifier.html  index.html  macro.call_inspectors!.html  macro.call_inspectors.html  sidebar-items.js  struct.ContractRunner.html  struct.Env.html  struct.EnvMut.html  struct.EvmEnv.html  struct.Lockfile.html  struct.MultiContractRunner.html  struct.MultiContractRunnerBuilder.html  struct.TestOptions.html  struct.TestOptionsBuilder.html  trait.InspectorExt.html  trait.TestFilter.html  type.DepMap.html
forge-node/: Cargo.toml
forge-node-types/: Cargo.toml
foundryup/: Cargo.toml  README.md  foundryup  foundryup.ps1  install  install.ps1  test.sh
gblend/: Cargo.toml  README.md
macros/: Cargo.toml
node/: Cargo.toml
sand/: Cargo.toml
seth/: Cargo.toml
shell/: Cargo.toml
solc/: Cargo.toml
tests/: Cargo.toml
ui/: Cargo.toml
utils/: Cargo.toml
(+43032 files in other folders)
